--- a/configs/infer_s_1.yaml
+++ b/configs/infer_s_1.yaml
@@ -2,7 +2,7 @@
 prev_stage: 'none'  # choices: none, s_1, s_2
 next_stage: 's_1'  # choices: s_1, s_2, s_3
 resume: false
-resume_path: '' ### TODO: Remember to set your pre-trained model path.
+resume_path: '/scratch_local/christina/pyramid-discrete-diffusion/checkpoints/s_1/models/epoch999.tar' ### TODO: Remember to set your pre-trained model path.
 generation_num: 10 #TODO: You can change this number to generate more or less.
 mode: 'inference' # choices: train, inference, infinity_gen
 infer_data_source: 'dataset' # choices: dataset, generation
@@ -16,10 +16,10 @@ mask_prob: [0.25, 0.25, 0.25, 0.25]  # [0] for up, [1] for left, [2] for up and 
 infinity_size: [3, 2]
 
 # Data settings
-dataset: 'carla'  # choices: carla, kitti
+dataset: 'pritti'  # choices: carla, pritti, kitti
 train_data_path: ''
 quantized_train_data_path: ''
-infer_data_path: './data/CarlaSC_quantized_32_32_4/Cartesian/Train'
+infer_data_path: '/scratch_local/christina/pyramid-discrete-diffusion/data/voxel_cache_32'
 quantized_infer_data_path: ''
 data_argumentation: false
 
