--- a/configs/infer_s_2_to_s_3.yaml
+++ b/configs/infer_s_2_to_s_3.yaml
@@ -1,14 +1,14 @@
 # Experiment settings
 prev_stage: 's_2'  # choices: none, s_1, s_2
 next_stage: 's_3'  # choices: s_1, s_2, s_3
-resume: false
-resume_path: '' ### TODO: Remember to set your pre-trained model path.
-generation_num: 10 #TODO: You can change this number to generate more or less.
+resume: true
+resume_path: '/home/raniatze/Documents/PhD/Research/pyramid-discrete-diffusion/checkpoints/s_2_to_s_3/models/epoch999.tar'
+generation_num: 10
 mode: 'inference' # choices: train, inference, infinity_gen
 infer_data_source: 'generation' # choices: dataset, generation ### TODO: Change to 'generation' if you want to use the generated data from s_2
 
 # Scene settings
-prev_scene_path: '' ### TODO: If you set 'infer_data_source' as 'generation', set the path to the generated scene file from s_2.
+prev_scene_path: '/home/raniatze/Documents/PhD/Research/pyramid-discrete-diffusion/generated/s_1_to_s_2/Generated/' ### TODO: If you set 'infer_data_source' as 'generation', set the path to the generated scene file from s_2.
 scene_fusion_method: 'discard'  # choices: discard, force, vote
 mask_ratio: 0.0625
 infinite_ratio: 0.1875
@@ -16,11 +16,11 @@ mask_prob: [0.25, 0.25, 0.25, 0.25]  # [0] for up, [1] for left, [2] for up and 
 infinity_size: [3, 2]
 
 # Data settings
-dataset: 'carla'  # choices: carla, kitti
+dataset: 'pritti'  # choices: carla, pritti, kitti
 train_data_path: ''
 quantized_train_data_path: ''
-infer_data_path: './data/CarlaSC_quantized_256_256_16/Cartesian/Train'
-quantized_infer_data_path: './data/CarlaSC_quantized_64_64_8/Cartesian/Train'
+infer_data_path: '/home/raniatze/Documents/skitti_workspace/cache/pdd_cache/voxel_cache_256'
+quantized_infer_data_path: '/home/raniatze/Documents/skitti_workspace/cache/pdd_cache/voxel_cache_64'
 data_argumentation: false
 
 # Hardware and distribution settings
